--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -159,6 +159,7 @@ jobs:
             php "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" assets:install public
 
       - name: Install ckeditor
+        uses: appleboy/scp-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
         with:
