--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -133,7 +133,7 @@ jobs:
             cd "${{ matrix.server.path }}/releases/${GITHUB_SHA}" && composer install --no-dev --no-interaction --prefer-dist --no-progress
 
       - name: Install assets
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
         with:
@@ -147,7 +147,7 @@ jobs:
             php "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" assets:install public
 
       - name: Install ckeditor
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
         with:
@@ -169,7 +169,7 @@ jobs:
             ${{ runner.os }}-yarn-cache-node-modules-
 
       - name: Yarn install
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
         with:
@@ -183,7 +183,7 @@ jobs:
             cd "${{ matrix.server.path }}/releases/${GITHUB_SHA}" && yarn install
 
       - name: Yarn build
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         env:
           GITHUB_SHA: ${{ github.sha }}
         with:
