deactivate yarn package precache

--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -159,18 +159,18 @@ jobs:
             chmod +x "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console"
             php "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" assets:install public
 
-      - name: Cache node_modules
-        uses: actions/cache@v1
-        id: yarn-cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-cache-node-modules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-cache-node-modules-
+#      - name: Cache node_modules
+#        uses: actions/cache@v1
+#        id: yarn-cache-node-modules
+#        with:
+#          path: node_modules
+#          key: ${{ runner.os }}-yarn-cache-node-modules-${{ hashFiles('**/yarn.lock') }}
+#          restore-keys: |
+#            ${{ runner.os }}-yarn-cache-node-modules-
 
       - name: Yarn install
         uses: appleboy/ssh-action@master
-        if: steps.yarn-cache-node-modules.outputs.cache-hit != 'true'
+#        if: steps.yarn-cache-node-modules.outputs.cache-hit != 'true'
         env:
           GITHUB_SHA: ${{ github.sha }}
         with:
