adjust sonar settings to get code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,6 +20,8 @@ sonar.sources=./src
 #language used
 sonar.language=php
 
+sonar.junit.reportsPath=build/reports
+
 # Encoding of the source code
 #sonar.sourceEncoding=UTF-8
 
