add sonar.php.tests.reportPath to sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,6 +21,7 @@ sonar.sources=./src
 sonar.language=php
 
 sonar.junit.reportsPath=build/reports
+sonar.php.tests.reportPath=build/reports
 
 # Encoding of the source code
 #sonar.sourceEncoding=UTF-8
