adjust sonar properties file to provide phpunit result information

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,8 +20,10 @@ sonar.sources=./src
 #language used
 sonar.language=php
 
-sonar.junit.reportsPath=build/reports
-sonar.php.tests.reportPath=build/reports
+sonar.tests=tests
+sonar.junit.reportsPath=build/reports/junit.xml
+sonar.php.tests.reportPath=build/reports/testdox.txt
+sonar.php.coverage.reportPath=build/reports/coverage-clover.xml
 
 # Encoding of the source code
 #sonar.sourceEncoding=UTF-8
