adjust again sonar properties to pass phpunit test results to sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,7 +22,7 @@ sonar.language=php
 
 sonar.tests=tests
 sonar.junit.reportsPath=build/reports/junit.xml
-sonar.php.tests.reportPath=build/reports/testdox.txt
+sonar.php.tests.reportPath=build/reports/junit.xml
 sonar.php.coverage.reportPath=build/reports/coverage-clover.xml
 
 # Encoding of the source code
