--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,10 +20,10 @@ sonar.sources=./src
 #language used
 sonar.language=php
 
-sonar.tests=tests
-sonar.junit.reportsPath=build/reports/junit.xml
-sonar.php.tests.reportPath=build/reports/junit.xml
-sonar.php.coverage.reportPaths=build/reports/coverage-clover.xml
+sonar.tests=./tests
+sonar.junit.reportsPath=./build/reports/junit.xml
+sonar.php.tests.reportPath=./build/reports/junit.xml
+sonar.php.coverage.reportPaths=./build/reports/coverage-clover.xml
 
 # Encoding of the source code
 #sonar.sourceEncoding=UTF-8
