add xdebug for coverage reports to qa workflow

--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -17,6 +17,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
+        coverage: xdebug
         extensions: imagick, swoole, zip, mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, json, pdo
 
     - name: Checkout
