--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -62,9 +62,6 @@ jobs:
         # Path to composer.lock
 #        composer-lock: # optional, default is ./composer.lock
 
-    - name: prepare php-cs-fixer config
-      run: cp .php-cs-fixer.dist.php .php-cs-fixer.php
-
     - name: php-codesniffer
       # You may pin to the exact commit or the version.
       # uses: pipeline-components/php-codesniffer@e3341450afba37fab4275b31f041646a26b2da9d
@@ -112,6 +109,9 @@ jobs:
 #        # Extra arguments to pass to the phpstan binary
 ##        args: # optional
 
+    - name: prepare php-cs-fixer config
+      run: cp .php-cs-fixer.dist.php .php-cs-fixer.php
+
     - name: PHP Code Style Fixer (php-cs-fixer)
       uses: StephaneBour/actions-php-cs-fixer@8.0-v3
       with:
@@ -126,7 +126,7 @@ jobs:
 #        configuration: ./phpunit.xml.dist
 #        memory_limit: 256M
 #        php_extensions: xdebug
-      run: bin/simple-phpunit
+      run: ./bin/simple-phpunit
 
 #    - name: Test Reporter
 #      uses: dorny/test-reporter@v1.4.3
