--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -20,6 +20,9 @@ jobs:
         coverage: xdebug
         extensions: imagick, swoole, zip, mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, json, pdo
 
+    - name: Debug output composer version
+      run: composer -v
+
     - name: Checkout
       uses: actions/checkout@v2
 
