--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -143,7 +143,8 @@ jobs:
           port: ${{ matrix.server.port }}
           envs: GITHUB_SHA
           script: |
-            php "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" ckeditor:install assets/build/ckeditor --clear=drop --release=custom --custom-build-id=ee064e47ec8943be855b785fa9c7146d
+            rm -r "${{ matrix.server.path }}/releases/${GITHUB_SHA}/assets/build/ckeditor/*
+            php "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" ckeditor:install ""${{ matrix.server.path }}/releases/${GITHUB_SHA}/assets/build/ckeditor" --clear=drop --release=custom --custom-build-id=ee064e47ec8943be855b785fa9c7146d
 
       - name: Install assets
         uses: appleboy/ssh-action@master
