adjust exclusion entry in sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,7 +24,7 @@ sonar.tests=./tests
 sonar.junit.reportsPath=./build/reports/junit.xml
 sonar.php.tests.reportPath=./build/reports/junit.xml
 sonar.php.coverage.reportPaths=./build/reports/coverage-clover.xml
-sonar.exclusions=**/vendor/**/*,**/node_modules/**/*,**/public/**/*,**/translations/**/*,**/assets/**/*,**/build/**/*,**/bin/**/*,**/var/**/*,**/.php*
+sonar.exclusions=vendor/*,node_modules/*,public/,translations/*,assets/*,build/*,bin/*,var/*,.php*
 
 # Encoding of the source code
 #sonar.sourceEncoding=UTF-8
