another try to exclude vendor and some other folders for sonar scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,18 +16,20 @@ sonar.sources=./src
 
 #Comma-separated paths to files with third-party libraries (JAR files in the case of Java). Patterns #can be used.
 #sonar.libraries=D:/eclipse workspace/NoSqlDataModeling/WebContent/WEB-INF/lib/*.jar
+sonar.libraries=vendor/**
 
 #language used
 sonar.language=php
+
+sonar.exclusions=vendor/**,node_modules/**,public/**,translations/**,assets/**,build/**,bin/**,var/**,.php-cs-fixer.php,.php-cs-fixer.php.dist,.php-cs-fixer.cache,.phpunit.result.cache
 
 sonar.tests=./tests
 sonar.junit.reportsPath=./build/reports/junit.xml
 sonar.php.tests.reportPath=./build/reports/junit.xml
 sonar.php.coverage.reportPaths=./build/reports/coverage-clover.xml
-sonar.exclusions=vendor/**,node_modules/**,public/**,translations/**,assets/**,build/**,bin/**,var/**,.php-cs-fixer.php,.php-cs-fixer.php.dist,.php-cs-fixer.cache,.phpunit.result.cache
 
 # Encoding of the source code
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
 # Additional parameters
 #sonar.my.property=value
