adjust some phpstan notices, replace absolut paths in QA workflow with relative paths

--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -184,8 +184,8 @@ jobs:
     - name: Cleanup Report Results
       shell: bash
       run: |
-        sed -i 's+/home/runner/work/byte-artist/byte-artist/+/github/workspace/+g' build/reports/junit.xml
-        sed -i 's+/home/runner/work/byte-artist/byte-artist/+/github/workspace/+g' build/reports/coverage-clover.xml
+         sed -i 's/\(.*file="\).*byte_artist\/\(.*"\)/\1\2/g' build/reports/junit.xml
+         sed -i 's/\(.*name="\).*byte_artist\/\(.*"\)/\1\2/g' build/reports/coverage-clover.xml
 
     - name: Upload Unit Test Results
       if: always()
