--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "twig/extensions": "^1.5"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.0",
         "mikey179/vfsstream": "^1.6",
         "phpstan/extension-installer": "^1.1",
@@ -45,6 +46,7 @@
         "phpstan/phpstan-doctrine": "^0.12.37",
         "phpstan/phpstan-phpunit": "^0.12.19",
         "phpstan/phpstan-symfony": "^0.12.33",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/browser-kit": "^5.2",
         "symfony/css-selector": "^5.2",
