--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -34,7 +34,7 @@
         <!-- Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url -->
         <!-- For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db" -->
         <!-- Configure your db driver and server_version in config/packages/doctrine.yaml -->
-        <env name="DATABASE_URL" value="mysql://db_user:db_password@127.0.0.1:3306/db_name"/>
+        <env name="DATABASE_URL" value="mysql://root:root@byte_artist_mysql:3306/byte_artist_test"/>
         <!-- ###- doctrine/doctrine-bundle ### -->
 
         <!-- ###+ symfony/swiftmailer-bundle ### -->
@@ -65,9 +65,11 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
-                <directory>./vendor</directory>
-                <directory>./tests</directory>
-                <directory>./translations</directory>
+                <directory>vendor</directory>
+                <directory>var</directory>
+                <directory>tests</directory>
+                <directory>translations</directory>
+                <directory>assets</directory>
             </exclude>
         </whitelist>
     </filter>
