--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+    types: [opened, synchronize, reopened]
 
 jobs:
   quality-assurance:
@@ -25,10 +26,12 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     # Optionally: unshallow as a separate operation
-    - name: Unshallow
-      run: git fetch --prune --unshallow
+#    - name: Unshallow
+#      run: git fetch --prune --unshallow
 #    - uses: actions/checkout@v2
 
     - name: Validate composer.json and composer.lock
@@ -206,12 +209,12 @@ jobs:
       run: ls -lisa ./build/reports/
 
     - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # You may pin to the exact commit or the version.
       # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
-      uses: SonarSource/sonarcloud-github-action@v1.6
 #      with:
         # Additional arguments to the sonarcloud scanner
 #        args: # optional
