--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -187,8 +187,8 @@ jobs:
 #    - name: Cleanup Report Results
 #      shell: bash
 #      run: |
-#         sed -i 's/\(.*file="\).*byte_artist\/\(.*"\)/\1\2/g' build/reports/junit.xml
-#         sed -i 's/\(.*name="\).*byte_artist\/\(.*"\)/\1\2/g' build/reports/coverage-clover.xml
+         sed -i 's/\(.*file="\).*byte-artist\/\(.*"\)/\1\2/g' build/reports/junit.xml
+         sed -i 's/\(.*name="\).*byte-artist\/\(.*"\)/\1\2/g' build/reports/coverage-clover.xml
 
     - name: Upload Unit Test Results
       if: always()
