--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -184,9 +184,9 @@ jobs:
 #        # GitHub Access Token
 #        token: ${{ github.token }} # optional, default is ${{ github.token }}
 
-#    - name: Cleanup Report Results
-#      shell: bash
-#      run: |
+    - name: Cleanup Report Results
+      shell: bash
+      run: |
          sed -i 's/\(.*file="\).*byte-artist\/\(.*"\)/\1\2/g' build/reports/junit.xml
          sed -i 's/\(.*name="\).*byte-artist\/\(.*"\)/\1\2/g' build/reports/coverage-clover.xml
 
