--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -255,10 +255,11 @@ jobs:
           port: ${{ matrix.server.port }}
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,BASE_PATH,ENV_PATH
           script: |
+            rm -r "$ACTIVE_RELEASE_PATH"
             ln -s -n -f "$RELEASE_PATH" "$ACTIVE_RELEASE_PATH"
-            ln -s -n -f "$BASE_PATH/var/log" "$ACTIVE_RELEASE_PATH/var/"
-            ln -s -n -f "$BASE_PATH/public/images/content/dynamisch" "$ACTIVE_RELEASE_PATH/public/images/content/"
-            ln -s -n -f "$BASE_PATH/public/upload" "$ACTIVE_RELEASE_PATH/public/"
+            ln -s -n -f "$RELEASE_PATH/var/log" "$ACTIVE_RELEASE_PATH/var/"
+            ln -s -n -f "$RELEASE_PATH/public/images/content/dynamisch" "$ACTIVE_RELEASE_PATH/public/images/content/"
+            ln -s -n -f "$RELEASE_PATH/public/upload" "$ACTIVE_RELEASE_PATH/public/"
 
   run-after-hooks:
     name: "${{ matrix.server.name }}: After hook"
